practice/config-map.yaml
kind: Pod
apiVersion: v1
metadata:
  name: configmap-environment
spec:
  containers:
    - name: cm-pod-cont
      image: nginx
      ports:
        - containerPort: 80
      ## to use ConfigMap as files in a volume
      volumeMounts:
         - name: html-from-cm
           mountPath: /usr/share/nginx/html/
           readOnly: true
  volumes:
   - name: html-from-cm
     configMap:
       name: db-connection
