practice/environment-variable.yml
kind: Pod
apiVersion: v1
metadata:
  name: environment-example
spec:
  containers:
    - name: cm-pod-cont
      image: nginx
      ports:
        - containerPort: 80
