practice/events.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2020-08-23T03:20:23Z"
  labels:
    run: nginx-web
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:run: {}
      f:spec:
        f:containers:
          k:{"name":"nginx-web"}:
            .: {}
            f:image: {}
            f:imagePullPolicy: {}
            f:name: {}
            f:resources: {}
            f:terminationMessagePath: {}
            f:terminationMessagePolicy: {}
        f:dnsPolicy: {}
        f:enableServiceLinks: {}
        f:restartPolicy: {}
        f:schedulerName: {}
        f:securityContext: {}
        f:terminationGracePeriodSeconds: {}
    manager: kubectl
    operation: Update
    time: "2020-08-23T03:20:23Z"
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:conditions:
          k:{"type":"ContainersReady"}:
            .: {}
            f:lastProbeTime: {}
            f:lastTransitionTime: {}
            f:status: {}
            f:type: {}
          k:{"type":"Initialized"}:
            .: {}
            f:lastProbeTime: {}
            f:lastTransitionTime: {}
            f:status: {}
            f:type: {}
          k:{"type":"Ready"}:
            .: {}
            f:lastProbeTime: {}
            f:lastTransitionTime: {}
            f:status: {}
            f:type: {}
        f:containerStatuses: {}
        f:hostIP: {}
        f:phase: {}
        f:podIP: {}
        f:podIPs:
          .: {}
          k:{"ip":"10.36.0.1"}:
            .: {}
            f:ip: {}
        f:startTime: {}
    manager: kubelet
    operation: Update
    time: "2020-08-23T03:20:26Z"
  name: nginx-web
  namespace: default
  resourceVersion: "310494"
  selfLink: /api/v1/namespaces/default/pods/nginx-web
  uid: c39318be-a235-4273-a4a9-d017c0091370
spec:
  containers:
  - image: nginx
    imagePullPolicy: Always
    name: nginx-web
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-wrcxp
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: kubernetes-node2
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-wrcxp
    secret:
      defaultMode: 420
      secretName: default-token-wrcxp
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2020-08-23T03:20:23Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2020-08-23T03:20:26Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2020-08-23T03:20:26Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2020-08-23T03:20:23Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://437bf73ede72f4fbfdb5562baa1b87641fe32b65bb9cb15292e0c0073dc05cd8
    image: nginx:latest
    imageID: docker-pullable://nginx@sha256:b0ad43f7ee5edbc0effbc14645ae7055e21bc1973aee5150745632a24a752661
    lastState: {}
    name: nginx-web
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2020-08-23T03:20:26Z"
  hostIP: 10.128.0.19
  phase: Running
  podIP: 10.36.0.1
  podIPs:
  - ip: 10.36.0.1
  qosClass: BestEffort
  startTime: "2020-08-23T03:20:23Z"
