practice/secrets.yaml
kind: Pod
apiVersion: v1
metadata:
  name: secret-environment
spec:
  containers:
    - name: cm-pod-cont
      image: nginx
      ports:
        - containerPort: 80
