practice/ingress-service-default.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-service
spec:
  selector:
    app: MyApp
  ports:
    - protocol: TCP
      port: 80
