practice/nodePort.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeport-servicedemo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp1
  template:
    metadata:
      labels:
        app: myapp1
    spec:
      containers:
      - name: myapp-cont
        image: nginx
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nodeport-svcdemo
spec:
  type: NodePort  ## this is default if we do not type in service definition
  selector:
    app: myapp1
  ports:
   - protocol: TCP
     port: 80
     targetPort: 80
     nodePort: 30010
