practice/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: website-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: website.com
    http:
      paths:
      - path: /backend
        backend:
          serviceName: backend-service
          servicePort: 443
      - path: /test
        backend:
          serviceName: test-service
          servicePort: 8000
  - http:
      paths:
      - backend:
          serviceName: default-service
          servicePort: 80
