practice/Privileged.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: privileged
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
