practice/Restricted.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restricted
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: customer-data
  policyTypes:
  - Ingress
  - Egress
  egress:
  - ports:
    - port: 443
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          customer-data-access: "true"
  ingress:
  - from:
    - podSelector:
        matchLabels:
          customer-data-access: "true"
    ports:
    - port: 80
      protocol: TCP
